<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="base_app_name">EarthAngel</string>

    <string name="Pull_down_to_refresh">Pull down to refresh</string>
    <string name="Refreshing">Refreshing......</string>
    <string name="Refresh_complete">Refresh complete</string>
    <string name="Release_refresh_now">Release refresh now</string>
    <string name="Loading_complete">Loading complete</string>
    <string name="loading">Loading...</string>
    <string name="reload_data">Please try again later</string>
    <string name="empty_data">No Items</string>
    <string name="base_date_yesterday">Yesterday</string>
    <string name="lib_home_publish">Post For Free</string>

    <string name="base_Products">Products</string>
    <string name="base_Products_Num">Products:</string>
    <string name="base_Condition">Condition</string>
    <string name="base_Category">Category</string>
    <string name="base_Condition_Product">What is the condition of this product?</string>
    <string name="base_Condition_Choose">Indicate the condition of products to \nhelp others choose.</string>
    <string name="base_Category_Product">Choose a category</string>
    <string name="base_Category_Choose">Help others locate your product quickly \nby choosing the correct category.</string>

    <string name="base_Product">Product</string>
    <string name="base_Add_to_cart">Add to cart</string>
    <string name="base_AddEd">Added</string>

    <string name="base_Invite">Invite</string>
    <string name="base_Join">Join</string>

    <string name="base_Go_to_cart">Go to cart</string>
    <string name="base_Cart">Cart</string>
    <string name="base_Share_Now">Share Now</string>
    <string name="base_Publish_Again">Publish Again</string>
    <string name="base_Comment">Comment</string>
    <string name="base_Delete_All">Do You Confirm Delete All</string>


    <string name="lib_base_register">Sign Up</string>
    <string name="base_tips_Email">Please input your email</string>
    <string name="base_tips_Password">Please input your password</string>
    <string name="base_Password_Error">Password should contain only letters and number</string>

    <string name="base_tips_code">Please input code</string>

    <string name="base_tips_oldPassword">Please input old password</string>
    <string name="base_tips_newPassword">Please input new password</string>
    <string name="base_tips_newPasswordAgain">Please input new password again</string>

    <string name="base_tips_EmailInvalid">Email is invalid</string>
    <string name="base_tips_Picture">At least one picture</string>
    <string name="base_tips_NoGifts">There are no Products to give</string>
    <string name="base_tips_comment">Are you sure you want to delete this comment?</string>
    <string name="base_tips_Report">Report</string>
    <string name="base_Delete_Comment">Delete Comment</string>
    <string name="base_Comment_success">Commented Successfully</string>
    <string name="base_Report_success">Reported Successfully</string>
    <string name="base_Delete_success">Deleted Successfully</string>

    <string name="base_head_IWant">I Want</string>
    <string name="base_head_HeWant">He Wants</string>
    <string name="base_head_Unavailable">This Product Is Unavailable.</string>
    <string name="base_head_Agreeds">Agreed To Give These Products.</string>
    <string name="base_head_Agreed">Agreed To Give This Product.</string>

    <string name="base_head_Name">Hi, </string>
    <string name="base_head_WantProduct">I Want This Product</string>
    <string name="base_head_WantTheseProduct">I Want These Products</string>
    <string name="base_head_Products">What Products Do You Have To Give Today?</string>
    <string name="base_head_ProductsList">Product List</string>
    <string name="base_head_Saved">Saved</string>
    <string name="base_head_NoProducts">No more products</string>
    <string name="base_head_Environmentalist">Be an environmentalist yourself and publish some products~!</string>
    <string name="base_cart_empty">Save your favorite products, pack them away when appropriate, and contribute to environmentalism</string>
    <string name="base_cart_title">No Items</string>
    <string name="base_cart_cause">Thank you for your continued contribution to the environmental protection. </string>

    <string name="base_I_Want_This">I Want This</string>
    <string name="base_I_Want_These">I Want These</string>
    <string name="label_Comment_Length">Comment should contain 1-500 characters.</string>
    <string name="label_Title_Length">Title should contain 1-100 characters.</string>
    <string name="label_Content_Length">Details should contain 1-500 characters.</string>

    <string name="base_tips_FirstName">First Name should contain 1-10 characters.</string>
    <string name="base_tips_Lastname">Last Name should contain 1-10 characters.</string>

    <string name="base_tips_name">Name should contain 1-20 characters.</string>
    <string name="base_tips_street_address">Street address should contain 1-100 characters.</string>
    <string name="base_tips_District">City should contain 1-20 characters.</string>
    <string name="base_tips_province">State should contain 1-20 characters.</string>
    <string name="base_tips_zip_code">Zip code should contain 1-10 characters.</string>
    <string name="base_tips_phone_number">Phone number should contain 1-20 characters.</string>
    <string name="base_tips_password">Password should contain 6-20 characters.</string>
    <string name="base_tips_passwordAgain">The password is different. Please input again.</string>

    <string name="label_User_Empty">You haven\'t saved any environmentalists yet.</string>
    <string name="label_Environmentalists">Environmentalists</string>
    <string name="label_no_items">no items</string>
    <string name="label_go_find">Go to find something you like</string>

    <string name="label_product">product waiting to be given</string>
    <string name="label_products">products waiting to be given</string>
    <string name="label_1">1</string>
    <string name="label_0">0</string>
    <string name="label_postProduct">postProduct</string>
    <string name="label_Success">Success</string>
    <string name="label_Added_Successfully">Added Successfully</string>
    <string name="label_Added_Already">Added Already</string>
    <string name="label_Community_Information">Community Information</string>
    <string name="label_Community_Information_et">Community Information:</string>

    <string name="label_Post_time">Post time</string>
    <string name="label_Eco_Credit">Eco Credit</string>
    <string name="label_Save">Save</string>

    <string name="label_Saved">Saved</string>
    <string name="label_Record">Record</string>
    <string name="label_Share">Share</string>
    <string name="label_Free">Free</string>
    <string name="label_First_Name">First Name</string>
    <string name="label_Last_Name">Last Name</string>
    <string name="label_Continue">Continue</string>
    <string name="label_Your_Name">What’s Your Name</string>
    <string name="label_Address">Address</string>
    <string name="label_Change_Password">Change Password</string>
    <string name="label_emailpassword_Wrong">Wrong email or password</string>
    <string name="label_Location_failed">Location failed</string>

    <string name="label_Share_Product">Share this product</string>

    <string name="label_hint_Email">Input email</string>
    <string name="label_Log_IN">Log In</string>
    <string name="label_Log_Out">Log Out</string>
    <string name="label_Version">Version</string>
    <string name="label_TermsofUse">Terms of Use</string>
    <string name="label_PrivacyPolicy">Privacy Policy</string>
    <string name="label_About">About</string>
    <string name="label_Notification">Notification</string>
    <string name="label_Name">Name</string>
    <string name="label_Email">Email</string>
    <string name="label_Edit">Edit</string>
    <string name="label_Account">Account</string>
    <string name="label_Setting">Setting</string>
    <string name="label_Add_Photos">Add Photos</string>
    <string name="label_Publish_Now">Publish Now</string>
    <string name="label_Cover_Image">Cover Image</string>
    <string name="label_Set_Cover">Set As Cover</string>
    <string name="label_Community_list">Community List</string>
    <string name="label_My_Groups">Joined</string>
    <string name="label_Community_nearby">Nearby</string>
    <string name="label_Create_now">Create Now</string>
    <string name="label_Create_nearby">Create the community nearby</string>
    <string name="label_Create_products">to make the products alive again.</string>

    <string name="label_New_with_Box">New with Box</string>
    <string name="label_New_with_Defects">New with Defects</string>
    <string name="label_New_without_Box">New without Box</string>
    <string name="label_Used">Used</string>
    <string name="label_Delete">Delete Account</string>


    <string name="Products_give">What do you have to give today?</string>
    <string name="Products_What">What\'s This Product</string>
    <string name="Products_Think">Input the name of this product</string>
    <string name="Product_Details">Product Details</string>
    <string name="Details_Are">Description</string>
    <string name="Associated">Associated</string>

    <string name="products_Add">Add more details about this product</string>

    <string name="label_Article_List">Article List</string>


    <string name="label_real_name">With real name, we can create a more trustworthy and more environmentally friendly app for users. </string>

    <string name="Post_used_product">Post used product</string>
    <string name="Post_used_contend">How to make the earth better? Send used products, avoid consumption, and lighten the burden on the planet.</string>
    <string name="Get_Eco_credit">Get Eco credit</string>
    <string name="Get_Eco_contend">Your product has been sent. You have contributed to the environmental protection of the earth &amp; you get some Eco credit.</string>
    <string name="Exchange_other_product">Exchange other products</string>
    <string name="Exchange_other_content">What a wonderful experience! Eco credit can be exchanged for other products and it is totally free.</string>

    <string name="call_notification">Voice/Video Call Notifications</string>
    <string name="background_tip">When the program is running in the background, new incoming call notifications will be displayed in the Notifications bar.</string>
    <string name="new_msg_notification">New Messages</string>
    <string name="new_msg">You\'ve received a new message.</string>
    <string name="call_nos">No response</string>
    <string name="basepermission_content">To use this feature, you need to grant permission. Since you have disabled related permission, please manually enable the permission.</string>
    <string name="basesetting">Settings</string>
    <string name="basecancel">Cancel</string>

</resources>