<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="handler"
            type="com.earth.angel.regist.ui.RegistNameFragment" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".regist.ui.RegistEmailFragment">
        <ImageView
            android:id="@+id/RegistNameBank"
            android:padding="@dimen/base_page"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@mipmap/arrow_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_marginTop="@dimen/_30sdp"
            android:paddingTop="@dimen/base_page"
            android:paddingBottom="@dimen/base_page"
            android:id="@+id/RegistNameLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_Your_Name"
            android:textColor="#ff090909"
            style="@style/Theme.BaseTextView"
            android:fontFamily="@font/avenirnext_latobolditalic"
            android:textSize="@dimen/bigText"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="@dimen/base_page"
            app:layout_constraintTop_toBottomOf="@+id/RegistNameBank"
            />
        <TextView
            android:id="@+id/RegistNameLoginContent"
            android:layout_marginRight="@dimen/base_page"
            android:layout_marginLeft="@dimen/base_page"
            app:layout_constraintTop_toBottomOf="@+id/RegistNameLogin"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            style="@style/Theme.BaseTitleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/label_real_name"
            android:textColor="#ff9d9d9d"
            android:textSize="14sp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/page_space"
            android:id="@+id/RegistNameFirstName"
            style="@style/UserSign.InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/base_page"
            android:fontFamily="@font/avenirnext_regular"
            android:hint="@string/label_First_Name"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="#FF9D9D9D"
            android:layout_marginLeft="@dimen/base_page"
            android:background="@drawable/bg_regist_8"
            android:textColorHint="#FF9D9D9D"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/RegistNameLoginContent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
        <com.google.android.material.textfield.TextInputEditText
            android:layout_marginTop="@dimen/page_space"
            android:id="@+id/RegistNameLastName"
            style="@style/UserSign.InputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/base_page"
            android:fontFamily="@font/avenirnext_regular"
            android:hint="@string/label_Last_Name"
            android:paddingLeft="@dimen/_10sdp"
            android:paddingTop="@dimen/_10sdp"
            android:paddingBottom="@dimen/_10sdp"
            android:textColor="#FF9D9D9D"
            android:layout_marginLeft="@dimen/base_page"
            android:background="@drawable/bg_regist_8"
            android:textColorHint="#FF9D9D9D"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@+id/RegistNameFirstName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:layout_marginBottom="@dimen/_60sdp"
            android:paddingTop="@dimen/btn_margin"
            android:paddingBottom="@dimen/btn_margin"
            android:layout_marginRight="@dimen/base_page"
            android:layout_marginLeft="@dimen/base_page"
            android:background="@drawable/bg_corners_shopp_28"
            android:gravity="center"
            android:fontFamily="@font/avenirnext_latobold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:id="@+id/nextBtn"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_Continue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
